--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "lint:full": "yarn lint && yarn lint:prettier && yarn lint:knip && yarn lint:jscpd"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.2.22",
+    "ai": "^4.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.553.0",
