--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ai": "^4.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "idb": "^8.0.3",
     "lucide-react": "^0.553.0",
     "next": "16.0.0",
     "react": "19.2.0",
