--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "idb": "^8.0.3",
     "lucide-react": "^0.553.0",
     "next": "16.0.0",
+    "next-auth": "^5.0.0-beta.30",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
