--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,7 @@ yarn-error.log*
 next-env.d.ts
 
 /src/generated/prisma
+# Allow generated Prisma client at root
+!/generated
+!/generated/client
+!/generated/client/**
