--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.1",
     "idb": "^8.0.3",
     "lucide-react": "^0.553.0",
+    "moment": "^2.30.1",
     "next": "16.0.0",
     "next-auth": "^5.0.0-beta.30",
     "prisma": "^6.19.0",
