--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^1.2.22",
+    "@joint/core": "^4.2.0",
     "@prisma/adapter-pg": "6.19.0",
     "@prisma/client": "^6.19.0",
     "@radix-ui/react-avatar": "^1.1.11",
@@ -26,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "idb": "^8.0.3",
+    "jointjs": "^3.7.7",
     "lucide-react": "^0.553.0",
     "moment": "^2.30.1",
     "next": "16.0.0",
