--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint:full": "yarn lint && yarn lint:prettier && yarn lint:knip && yarn lint:jscpd"
   },
   "dependencies": {
-    "@ai-sdk/google": "^1.2.22",
+    "@ai-sdk/google": "^2.0.32",
+    "@ai-sdk/openai": "^2.0.67",
     "@prisma/adapter-pg": "6.19.0",
     "@prisma/client": "^6.19.0",
     "@radix-ui/react-avatar": "^1.1.11",
@@ -22,7 +23,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
-    "ai": "^4.0.0",
+    "ai": "^5.0.93",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "idb": "^8.0.3",
