--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint:full": "yarn lint && yarn lint:prettier && yarn lint:knip && yarn lint:jscpd"
   },
   "dependencies": {
+    "@ai-sdk/gateway": "^2.0.9",
     "@ai-sdk/google": "^2.0.32",
     "@ai-sdk/openai": "^2.0.67",
     "@prisma/adapter-pg": "6.19.0",
