--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "idb": "^8.0.3",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.553.0",
     "moment": "^2.30.1",
     "next": "16.0.0",
